--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,18 +1,26 @@
-@media support and (max-width: 1340px) {
+@media screen and (max-width: 1340px) {
  .sidebar {
     display:none;
   }
 }
 
+@media screen and (max-width:1080) {
+  .galleryNav div::before,
+  .galleryNav div::after {
+    background: white;
+  }
+}
+
 @media screen and (max-width: 1020px) {
-  article img {
+  article > img,
+    .galleryRail img{
     width: 100%;
   }
 }
 
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  article > * {
+  article > *:not(section) {
     width: calc(100% - 40px);
   }
 }
@@ -22,11 +30,16 @@
     min-width: 320px;
   }
 
-  article > * {
+  article > *:not(section) {
     width: calc(100% - 40px);
   }
 }
 
+.galleryRail figure {
+  width: 100%;
+  min-width: 100%;
+ }
+}
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
   .sidebar {
     display: none;
