--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 body {
+  min-width: 768px;
   font-family: 'PT Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
