--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -4,15 +4,23 @@
   }
 }
 
-@media screen and (max-width: 1020px) {
-  article img {
-    width: 100%;
+@media screen and (max-width: 1080px) {
+  .galleryNav div::before,
+  .galleryNav div::after {
+    background: white;
   }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  article > * {
-    width: calc(100% - 40px);
+@media screen and (max-width: 1020px) {
+  article > img,
+  .galleryRail img {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .galleryRail figure {
+    width: 768px;
+    min-width: 768px;
   }
 }
 
@@ -20,11 +28,15 @@
   body {
     min-width: 320px;
   }
-
-  article > * {
+  article > *:not(section) {
     width: calc(100% - 40px);
   }
+  .galleryRail figure {
+    width: 100%;
+    min-width: 100%;
+  }
 }
+
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
   .sidebar {
