--- a/lllafemme/stylesheets/responsive.css
+++ b/lllafemme/stylesheets/responsive.css
@@ -22,7 +22,7 @@ article > a:nit(section) {
   width: calc(100%-40px);
 }
 
-
+.galleryRail figure
 
 @media screen and (max-width: 768px) {
   .galleryRail figure {
