--- a/Filichkinadarina/stylesheets/responsive.css
+++ b/Filichkinadarina/stylesheets/responsive.css
@@ -40,8 +40,8 @@
   }
 }
 
-/*@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
   .sidebar {
     display: none;
   }
-}*/
+}
